@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Jan-2011 Mark Dexter
+# [#24644] Joomla! Web Application Framework library is uninstallable
+
 27-Jan-2011 Christophe Demko
  # [#24558] Improve the Directory Permissions in com_admin (Rouven Weßling)
 
